--- a/css/pages/show.css
+++ b/css/pages/show.css
@@ -3,6 +3,7 @@
     html,body,.pageWrap,.wrap{
         width: 100%;
         height: 100%;
+        background-color: #eeeeee;
     }
     html{
         overflow: hidden;
@@ -55,6 +56,7 @@
         width: 50px;
         height: 50px;
         margin: 25px 10px;
+        border-radius: 10px;
     }
     .team .score{
         float: left;
@@ -65,6 +67,11 @@
         text-overflow:ellipsis;
         white-space: nowrap;
         text-align: center;
+    }
+    #iaudio{
+        position: fixed;
+        top: -1000px;
+        left: 0;
     }
 }
 
